<resources>
    <string name="app_name">Trizions</string>
    <string name="invest_influence_impact_text">Invest Influence Impact</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="success">Success</string>
    <string name="confirm">Confirm</string>
    <string name="warning">Warning</string>
    <string name="error_network">Please check your internet connection.</string>
    <string name="sign_in_title">Sign-in</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number">Enter your Mobile Number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your Password</string>
    <string name="forgot_password_text_part_one">Forgot your password? </string>
    <string name="forgot_password_text_part_two"> RECOVER IT!</string>
    <string name="sign_in">Sign-in</string>
    <string name="scan_code">Scan Code</string>
    <string name="does_not_have_account">Don\'t have an account\ ?&#160;</string>
    <string name="sign_up">Sign-up</string>
    <string name="error_mobile_number">This information is required. Please enter your mobile number.</string>
    <string name="invalid_number">The mobile number you\'ve entered is invalid. Please check the number</string>
    <string name="error_email">This information is required. Please enter your email.</string>
    <string name="invalid_email">The email address you\'ve entered is invalid. Please try again</string>
    <string name="error_password">This information is required. Please enter your password.</string>
    <string name="error_user_name">This information is required. Please enter your user name.</string>
    <string name="sign_up_title_small">Sign Up</string>
    <string name="user_name">User name</string>
    <string name="enter_user_name">Enter your user name</string>
    <string name="enter_email_address">Enter your Email Address</string>
    <string name="email_address">E-mail Address</string>
    <string name="next">Next</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="retrieve_account">Retrieve Account</string>
    <string name="login_with_mobile_number">Login with mobile number</string>
    <string name="send">Send</string>
    <string name="verify">Verify</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter your otp</string>
    <string name="error_otp">his information is required. Please enter your OTP.</string>
    <string name="invalid_otp">Please enter the valid OTP</string>
    <string name="tab_title_about_us">About Us</string>
    <string name="tab_title_products_and_services">Products</string>
    <string name="tab_title_projects">Projects</string>
    <string name="tab_title_clients">Clients</string>
    <string name="tab_title_contact_us">Contact us</string>
    <string name="welcome_message">Good Morning</string>
    <string name="about_us_header_text">Custom IoT Solutions for Enterprises</string>
    <string name="about_us_text">Our IoT app developers provide services from product conceptualization to ongoing IoT development services.
    Being a full-stack IoT software development company, we build custom IoT applications specific to our clients.
    As a reliable IoT app development partner, we consider security as an integral part of IoT hardware design and app development.</string>
    <string name="about_us_services_header_text">Our IoT Development Services</string>
    <string name="about_us_services_text">* IoT Hardware Design\n* IoT Firmware Integration\n* Mobile Apps for IoT Devices\n* Custom IoT Product Development\n</string>
    <string name="contact_us_company_name_text">Trizions Management Consultancy (OPC) Private Limited</string>
    <string name="contact_us_text">No. 159/1a1a1, TSR Avenue, Sundar Nagar,\nMannivakkam,\nChennai,\nIndia - 600048</string>
    <string name="call_us">+91 9980919307</string>
    <string name="email_us">hr_admin_010@trizions.com</string>
    <string name="get_direction">Get Direction</string>
    <string name="percentage">30% completed</string>
    <string name="title">Description:</string>
    <string name="details">New lights installation and repair existing lights.</string>
    <string name="address">No. 3/65, 11th cross street, Mannivakkam, Chennai</string>
    <string name="description">The concept of lighting installation is used mostly in reference to installations of artificial electric illumination, in which case the installation includes the lighting devices with their light sources, the starting and controlling apparatus, supply mains, switchboards, and various electrical equipment used for this work. The concept of lighting installation is used mostly in reference to installations of artificial electric illumination, in which case the installation includes the lighting devices with their light sources, the starting and controlling apparatus, supply mains, switchboards, and various electrical equipment used for this work</string>
    <string name="pie_chart">pie chart</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="no_3_65_11th_cross_street_mannivakkam_chennai">No. 3/65, 11th cross street, Mannivakkam, Chennai</string>
    <string name="contact_zoho_com">contact@zoho.com</string>
    <string name="_91_9789999321">+ 91 9789999321</string>
    <string name="zoho_software_solutions">Zoho Software Solutions</string>
    <string name="rakesh_sharma">Rakesh Sharma</string>
    <string name="material">Material</string>
    <string name="umo">UMO</string>
    <string name="quantity">Quantity</string>
    <string name="meter">Meter</string>
    <string name="_7320">7320</string>
    <string name="clamps">Clamps</string>
    <string name="pcs">Pcs</string>
    <string name="_1623">1623</string>
    <string name="conduit">Conduit</string>
    <string name="_541">541</string>
    <string name="couplers">Couplers</string>
    <string name="junction_box">Junction Box</string>
    <string name="_232">232</string>
    <string name="led_bulkhead_lights">LED Bulkhead Lights</string>
    <string name="screws_and_fixtures">Screws and Fixtures</string>
    <string name="_3246">3246</string>
    <string name="grand_total">Grand Total</string>
    <string name="_13735">13735</string>
    <string name="material_specification">Material Specification</string>
    <string name="add_image">Add Image</string>
    <string name="add_video">Add Video</string>
    <string name="show_gallery">Show Gallery</string>
    <string name="cables_2_5_sq_m">Cables(2.5 SQ M)</string>
    <string name="specification">Specification</string>
    <string name="brand">Brand</string>
    <string name="bulkhead_lights">Bulkhead Lights</string>
    <string name="wall_mounted_led_light_bulkhead_ip65_20w">Wall mounted LED light bulkhead IP65 20W</string>
    <string name="one_light">ONE Light</string>
    <string name="g_i_conduits">G.I conduits</string>
    <string name="_25mm">25mm</string>
    <string name="cot">COT</string>
    <string name="cables">Cables</string>
    <string name="_4c_25sqmm">4C-25SqMM</string>
    <string name="ducab">Ducab</string>
    <string name="_3_way_junction_box">3-Way junction box</string>
    <string name="_25mm_for_gi_conduit">25mm for GI conduit</string>
    <string name="rexton">Rexton</string>
    <string name="rob_finnerty">Rob Finnerty</string>
    <string name="engineer">Engineer</string>
    <string name="manager">Manager</string>
    <string name="waste_management_systems">Waste Management Systems</string>
    <string name="project_details">Project Details</string>
    <string name="raheja_towers_d001">Raheja Towers (D001)</string>
    <string name="_30_completed">30% completed</string>
    <string name="new_lights_installation_and_repair_existing_lights">New lights installation and repair existing lights.</string>
    <string name="result_not_found">Results not found</string>
    <string name="chat">Chat</string>
    <string name="change_password">Change password</string>
    <string name="notifications">Notifications</string>
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>
    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="type_your_message">Type your message…</string>
    <string name="logout">Logout</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="enter_old_password">Enter the old password</string>
    <string name="enter_new_password">Enter the new password</string>
    <string name="error_old_password">This information is required. Please enter your old password.</string>
    <string name="error_new_password">This information is required. Please enter your new password.</string>
    <string name="error_product_name">Please enter the product name!</string>
    <string name="error_product_details">Please enter the product details</string>
    <string name="product_name">Product name</string>
    <string name="enter_the_product_name">Enter the product name</string>
    <string name="product_details">Product Details</string>
    <string name="enter_the_product_details">Enter the product Details</string>
    <string name="add_product">Add product</string>
    <string name="add_products_and_services">Add products and services</string>
    <string name="edit_products_and_services">Edit products and services</string>
    <string name="edit_product">Edit product</string>
    <string name="error_client_name">Please enter the client name!</string>
    <string name="error_client_role">Please enter the client role!</string>
    <string name="error_client_bussiness">Please enter the business name!</string>
    <string name="error_client_mobile">Please enter the client mobile number!</string>
    <string name="error_client_email">Please enter the client Email!</string>
    <string name="error_client_address">Please enter the client address!</string>
    <string name="add_clients">Add clients</string>
    <string name="select_image">Select image</string>
    <string name="client_name">Client Name</string>
    <string name="enter_the_client_name">Enter the client name</string>
    <string name="client_role">Client Role</string>
    <string name="enter_the_client_role">Enter the client role</string>
    <string name="client_business_name">Client business Name</string>
    <string name="enter_the_client_business_name">Enter the client business name</string>
    <string name="client_mobile_number">Client Mobile number</string>
    <string name="enter_the_client_mobilenumber">Enter the client MobileNumber</string>
    <string name="client_email">Client Email</string>
    <string name="client_address">Client Address</string>
    <string name="enter_the_client_address">Enter the client address</string>
</resources>