<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAddImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/background_corner_radius"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/work_sans_medium"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/add_image"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/textViewAddVideo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/background_corner_radius"
                android:clickable="true"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/add_video"
                android:fontFamily="@font/work_sans_medium"
                android:textColor="@color/colorWhite"
                android:focusable="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewShowGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/background_corner_radius"
            android:clickable="true"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/show_gallery"
            android:fontFamily="@font/work_sans_medium"
            android:textColor="@color/colorWhite"
            android:focusable="true" />
    </LinearLayout>
</LinearLayout>